Implementação do Device Key Fase 1